--- a/vue/package.json
+++ b/vue/package.json
@@ -8,8 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.28.0",
+    "axios": "^1.6.8",
     "core-js": "^3.9.1",
+    "postcss": ">=8.4.31",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
@@ -21,6 +22,7 @@
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
     "@vue/test-utils": "1.1.3",
+    "postcss": ">=8.4.31",
     "eslint": "^8.26.0",
     "eslint-plugin-vue": "^7.7.0",
     "vue-loader-v16": "npm:vue-loader@16.1.2",
